add missing meta tag closing

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="author" content="Aransa Garcia, Joseph P. Pasaoa, Kathy Puma, and Sergio Salama"
+    <meta name="author" content="Aransa Garcia, Joseph P. Pasaoa, Kathy Puma, and Sergio Salama" />
     <meta
       name="description"
       content="Greenlist Registry (a full-stack sustainable material forum app)"
