--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="author" content="Aransa Garcia, Joseph P. Pasaoa, Kathy Puma, and Sergio Salama"
+    <meta name="author" content="Aransa Garcia, Joseph P. Pasaoa, Kathy Puma, and Sergio Salama" />
     <meta
       name="description"
       content="Greenlist Registry (a full-stack sustainable material forum app)"
